--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
@@ -47,9 +47,11 @@
                     {% for period in periods %}
                     <option {% if period.isActual == '1' %}  selected="selected" {% endif %} value="{{ period.id }}">{{period}}</option>
                     {% endfor %}
+                    <option value="3" convo="1">CONVI</option>
+                    <option value="3" convo="2">CONVII</option>
                 </select>
             </div>
-
+            <input id="conv" name="conv" hidden="hidden" value = "0">
             <div id="groupsContainer" class="left" style="margin-left: 50px;">
                 <div class="left" style="width: 65px; font-weight: bold;">{%trans%}label.groups{%endtrans%}</div>
                 <div class="left">
