Using queue for observations on teacher area

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
@@ -109,6 +109,9 @@
                 <div class="left" style="line-height: 48px; margin-left: 25px;">
                     <span>Ingrese o verifique la informacion de las notas de los estudiantes por grupo</span>
                 </div>
+                <div id="pendientes" class="right" style="line-height: 48px;">
+                    0 Pendientes
+                </div>
                 <div class="clear"></div>
             </div>
             <div class="clear"></div>
